--- a/Documents/wildCodeSchool/Quests/my-website-oops/index.html
+++ b/Documents/wildCodeSchool/Quests/my-website-oops/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>my-superwebsite-oops</title>
 
     </head>
 
     <body>
-        
+
     </body>
 </html>
